[package]
name = "gfycat"
version = "0.1.0"
authors = ["Vanillabrooks <brooks@karlik.org>"]
edition = "2018"

[lib]
name = "gfycat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0.44"
surf = "1.0.3"
async-std = "1.4.0"


[[bin]]
name = "gfycat-binary"
path = "src/main.rs"
