[package]
name = "gfycat"
version = "0.1.0"
authors = ["Vanillabrooks <brooks@karlik.org>"]
edition = "2018"

[lib]
name = "gfycat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0.44"
reqwest = {version="0.10.0-alpha.2", features=["json"]}
tokio = {version=  "0.2.0-alpha.6", features=["macros"]}

[[bin]]
name = "gfycat-binary"
path = "src/main.rs"
